compared the predictions

--- a/VCI_ArUco.ipynb
+++ b/VCI_ArUco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import cv2\n",
     "import plotly.graph_objects as go\n",
     "from tqdm import tqdm\n",
+    "from datetime import datetime\n",
     "\n",
     "from utilities.ArUco_detector import visualize_detections_on_image, get_marker_positions, add_cameras_to_fig, add_markers_to_fig, extract_2d_marker_positions, add_skeleton_to_fig, detections_to_json, clean_invalid_markers\n",
     "from utilities.camera import load_cameras_from_json"
@@ -17,29 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "calibration_file = 'calibration_dome.json'  # the calibrated camera params\n",
     "input_base_path = \"/data/vci/motion_markers\"\n",
-    "sequence_name = \"2026_01_29_motion_markers_002\"\n",
-    "output_json_path = f\"detections_{sequence_name}.json\"\n",
-    "frame_number = 208"
+    "sequence_name = \"2026_01_29_motion_markers_001\"\n",
+    "frame_number = 207 # seq1_n = 36, seq2_n = 209, seq3_n = 207, seq4_n = 106\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "output_json_path = f\"seq_{sequence_name[-3:]}_j12_t{timestamp}.json\"\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "uppermost_view_names = [\"C0025\", \"C0030\", \"C0024\", \"C0019\", \"C0031\", \"C0039\"]\n",
-    "# upper_view_names = [\"C0014\", \"C0009\", \"C0016\", \"C0000\"]\n",
-    "# middle_view_names = [\"C0007\", \"C0018\", \"C0004\", \"C0034\", \"C0006\", \"C0008\", \"C0026\", \"C0005\", \"C0028\", \"C0029\", \"C0012\", \"C0038\"]\n",
+    "upper_view_names = [\"C0014\", \"C0009\", \"C0016\", \"C0000\"]\n",
+    "middle_view_names = [\"C0007\", \"C0018\", \"C0004\", \"C0034\", \"C0006\", \"C0008\", \"C0026\", \"C0005\", \"C0028\", \"C0029\", \"C0012\", \"C0038\"]\n",
     "lower_view_names = [\"C0022\", \"C1000\", \"C0037\", \"C0021\", \"C0020\", \"C1005\"]\n",
-    "# lowermost_view_names = [\"C1001\", \"C0001\", \"C0013\", \"C1004\", \"C1002\", \"C0010\"]\n",
-    "view_names = uppermost_view_names + lower_view_names\n",
+    "lowermost_view_names = [\"C1001\", \"C0001\", \"C0013\", \"C1004\", \"C1002\", \"C0010\"]\n",
+    "view_names = uppermost_view_names + upper_view_names + middle_view_names + lower_view_names + lowermost_view_names\n",
     "\n",
     "my_cameras = load_cameras_from_json(calibration_file, view_names)\n",
     "scale = 1.0\n",
@@ -49,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading Frames & Detecting:   0%|          | 1/208 [00:11<38:53, 11.27s/it]"
+      "Loading Frames & Detecting:   0%|          | 1/207 [00:32<1:51:23, 32.44s/it]"
      ]
     },
     {
@@ -64,14 +67,59 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[WARNING] Frame 0: Found unexpected marker IDs outside 0-11 range: [np.int32(37)]\n"
+      "[WARNING] Frame 0: Found unexpected marker IDs outside 0-11 range: [np.int32(17)]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading Frames & Detecting:   3%|▎         | 6/208 [01:08<38:26, 11.42s/it]"
+      "Loading Frames & Detecting:   1%|          | 2/207 [01:04<1:49:26, 32.03s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[WARNING] Frame 1: Found unexpected marker IDs outside 0-11 range: [np.int32(17)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading Frames & Detecting:   2%|▏         | 5/207 [02:39<1:47:20, 31.88s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[WARNING] Frame 4: Found unexpected marker IDs outside 0-11 range: [np.int32(49)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading Frames & Detecting:   3%|▎         | 6/207 [03:11<1:46:37, 31.83s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[WARNING] Frame 5: Found unexpected marker IDs outside 0-11 range: [np.int32(17)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading Frames & Detecting:   3%|▎         | 7/207 [03:43<1:45:58, 31.79s/it]"
      ]
     }
    ],
@@ -88,7 +136,7 @@
     "    found_invalid_ids = set()   # Bad IDs (outside 0-11 range) found in this frame\n",
     "\n",
     "    for view_idx, view_name in enumerate(view_names):\n",
-    "        image_path = os.path.join(input_base_path,sequence_name,f\"frame_{frame_idx:05d}\",\"rgb\",f\"{view_name}.png\") # Load every two frames, 15 FPS is enough tp preview\n",
+    "        image_path = os.path.join(input_base_path,sequence_name,f\"frame_{frame_idx:05d}\",\"rgb\",f\"{view_name}.png\")\n",
     "        img_bgr = cv2.imread(image_path, cv2.IMREAD_COLOR | cv2.IMREAD_IGNORE_ORIENTATION)\n",
     "        img_rgb = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
     "        corners, marker_ids, rejected = detector.detectMarkers(img_bgr)\n",
@@ -127,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved formatted marker positions to detections_2026_01_29_motion_markers_002.json\n"
+      "Saved formatted marker positions to seq_001_j12_t20260212_110830.json\n"
      ]
     }
    ],
@@ -144,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
