--- a/compare_results.ipynb
+++ b/compare_results.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import math"
+    "\n",
+    "from utilities.visualize import create_error_timeline_gif\n",
+    "from utilities.ArUco_detector import convert_predictions, compare_sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,77 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fix the idx's for ids to correspond exactly so for example the joint indext 0 must correspond to right hand wrist for both of them\n",
-    "# Change the coordinate scaling, convert everything to meters \n",
-    "# The predictions have a completely different coordinate system, swap the y and z coordinates and negate the whole coordinate\n",
-    "def convert_predictions(pred_data, mapping):\n",
-    "    processed_predictions = {}\n",
-    "    \n",
-    "    for frame_id, joints in pred_data.items():\n",
-    "        processed_predictions[frame_id] = {}\n",
-    "        \n",
-    "        for pred_idx, gt_idx in mapping:\n",
-    "            # JSON keys are strings, mapping provides ints\n",
-    "            pred_key = str(pred_idx)\n",
-    "            gt_key = str(gt_idx)\n",
-    "            \n",
-    "            if pred_key in joints:\n",
-    "                raw_coords = joints[pred_key]\n",
-    "                x_mm, y_mm, z_mm = raw_coords\n",
-    "                \n",
-    "                # Scale to meters\n",
-    "                x_m = x_mm / 1000.0\n",
-    "                y_m = y_mm / 1000.0\n",
-    "                z_m = z_mm / 1000.0\n",
-    "                \n",
-    "                # Transform coordinate system\n",
-    "                # \"Swap y and z coordinates and negate the whole coordinate\"\n",
-    "                # Input: (x, y, z)\n",
-    "                # Swap Y/Z: (x, z, y)\n",
-    "                # Negate: (-x, -z, -y)\n",
-    "                new_x = -x_m\n",
-    "                new_y = -z_m\n",
-    "                new_z = -y_m\n",
-    "                \n",
-    "                processed_predictions[frame_id][gt_key] = [new_x, new_y, new_z]\n",
-    "                \n",
-    "    return processed_predictions\n",
-    "\n",
-    "def compare_sequences(ground_truth, processed_preds):\n",
-    "    frame_diffs = {}\n",
-    "    \n",
-    "    # Iterate over frames present in Ground Truth\n",
-    "    for frame_id, gt_joints in ground_truth.items():\n",
-    "        if frame_id not in processed_preds:\n",
-    "            continue\n",
-    "            \n",
-    "        pred_joints = processed_preds[frame_id]\n",
-    "        frame_diffs[frame_id] = {}\n",
-    "        \n",
-    "        # Iterate over joints present in Ground Truth frame\n",
-    "        for joint_id, gt_coord in gt_joints.items():\n",
-    "            if joint_id in pred_joints:\n",
-    "                pred_coord = pred_joints[joint_id]\n",
-    "                \n",
-    "                # Calculate Euclidean distance\n",
-    "                dist = math.sqrt(\n",
-    "                    (gt_coord[0] - pred_coord[0])**2 +\n",
-    "                    (gt_coord[1] - pred_coord[1])**2 +\n",
-    "                    (gt_coord[2] - pred_coord[2])**2\n",
-    "                )\n",
-    "                \n",
-    "                frame_diffs[frame_id][joint_id] = dist\n",
-    "                \n",
-    "    return frame_diffs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2812,6 +2744,24 @@
     "print(\"\\n--- Verification Sample ---\")\n",
     "print(f\"GT Frame 0 Joint 0: {ground_truth_data['0']['0']}\")\n",
     "print(f\"Pred Frame 0 Joint 0 (mapped from 11): {processed_preds['0']['0']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating GIF with 209 frames at 14.93 FPS...\n",
+      "Done! GIF saved to: /data/student_demiralp/ArUco_VCI_Skeleton/error_analysis.gif\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_error_timeline_gif(differences, \"error_analysis.gif\", duration_ms=67)"
    ]
   }
  ],
