--- a/speed_graph.ipynb
+++ b/speed_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ground truth data has 12 joints, their coordinates are given in meters (m)\n",
     "# Ground truth data might be missing some of the joint positions in some frames (of the sequence)\n",
-    "ground_truth_json_path = \"ground_truth/seq_001_j12_t20260212_110830.json\"\n",
+    "ground_truth_json_path = \"ground_truth/seq_002_j12_t20260211_223142.json\"\n",
     "\n",
     "# Ground truth data has 15 joints, their coordinates are given in milimeters (mm)\n",
     "# For all of the frames in the sequence if a prediction is made every joint is predicted and exists in the JSON\n",
     "# However in some frames the prediction was not cpnfident enough so there are no prediction at all -> \"181\": {}\n",
-    "prediction_json_path = \"predictions/seq_001_j15_t20260211_231819.json\"\n",
+    "prediction_json_path = \"predictions/seq_004_j15_t20260211_230320.json\"\n",
     "\n",
     "\n",
     "# The mapping shows the mapping from predicted frames to ground truth data, only 10 of the mappings can be made\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating GIF with 36 frames...\n",
-      "Saved to seq_001_avg_predicted_speed_graph.gif\n"
+      "Generating GIF with 209 frames...\n"
      ]
     }
    ],
    "source": [
-    "create_speed_timeline_gif(processed_preds, f\"{ground_truth_json_path[13:20]}_avg_predicted_speed_graph.gif\", duration_ms=70, title = 'Average Predicted Joint Speed per Frame')"
+    "#create_speed_timeline_gif(processed_preds, f\"{prediction_json_path[12:19]}_avg_predicted_speed_graph.gif\", duration_ms=70, title = 'Average Predicted Joint Speed per Frame')\n",
+    "create_speed_timeline_gif(ground_truth_data, f\"{ground_truth_json_path[13:20]}_avg_predicted_gt_graph.gif\", duration_ms=70, title = 'Average GT Joint Speed per Frame', line_color = 'darkgreen')"
    ]
   }
  ],
